Updated to match our readme.md

--- a/CST383_Final_Project.ipynb
+++ b/CST383_Final_Project.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Title: Coding the Future: Predicting Software Engineering Job Trends in the U.S\n",
+        "Predicting Software Engineering Job Trends in the U.S\n",
         "---\n",
         "\n"
       ],
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Authors: Kha Ai Dang, Neng Lao, Enrique Villegas"
+        "Team Members: Kha Ai Dang, Neng Lao, Enrique Villegas"
       ],
       "metadata": {
         "id": "kiti3TQ_AHA1"
@@ -49,112 +49,49 @@
       "cell_type": "markdown",
       "source": [
         "# Introduction\n",
+        "\n",
         "---\n",
         "\n"
       ],
       "metadata": {
-        "id": "NC55rT1OGiYL"
+        "id": "1lxAf6nVDGC3"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "The Tech industry in the United States is rapidly changing and Software Engineers are some of the key players in driving innovation and economic growth. However, job availability and demand are influenced by factors such as corporate hiring strategies and remote work adoption. With that said, we hope to analyze these patterns in software engineering job listings within the United States to identify current demands, hiring trends, and employer preferences. Using data analysis and predictive modeling, our goal is to forecast future job availability. Ultimately, we are aiming to help job seekers and employers better understand how these factors shape opportunities in the industry and offer data-driven insights into the dynamics of the Software Engineer market."
+        "The Tech industry in the United States is rapidly changing and Software Engineers are some of the key players in driving innovation and economic growth. However, job availability and demand are influenced by factors such as corporate hiring strategies and remote work adoption. With that said, we hope to analyze these patterns in software engineering job listings within the United States to identify current demands, hiring trends, and employer preferences. Using data analysis and predictive modeling, our goal is to forecast future job availability. Ultimately, we are aiming to help job seekers and employers better understand how these factors shape opportunities in the industry and offer data-driven insights into the dynamics of the Software Engineer market.\n",
+        "\n",
+        "**Our Goal:**  \n",
+        "In this project, our goal is to predict job availability and demand for software engineering roles in the United States. Using features such as Job Title, Company, Location, Employment Type, and Remote Work Options, we will create predictive models to estimate job openings and identify factors that influence hiring trends. Our analysis will show which skills and positions are in highest demand, how remote work affects opportunities, and how these patterns may shift over time. Our predictions will hopefully help job seekers and employers make data-driven decisions about our evolving software job market.\n",
+        "\n",
+        "**Selection of Data:**  \n",
+        "For our Final Project, we used US Software Engineer Jobs from Kaggle:  \n",
+        "https://www.kaggle.com/datasets/mexwell/us-software-engineer-jobs?resource=download.  \n",
+        "  \n",
+        "This dataset contains over 50,000 jobs postings for software engineering positions in the United States and uses data that was collected on July 22, 2021. The postings provide details such as the Job Title, Company, Salary Ranges, Location, Employment Type, Employer Ratings, Urgency of Hiring, and Remote Work Option. This dataset contains information pertaining to employer behavior and demand signals. Both of these will allow us to track trends in the industry, such as Remote versus Onsite listings, Urgency Indicators, and Role Distribution in the United States.  \n",
+        "\n",
+        "To supplement this dataset with a salary column, we combined it with another dataset from the U.S Bureau of Labor Statistics (BLS) under the Occupational Employment and Wage Statistics (OEWS) program.  \n",
+        "https://www.bls.gov/oes/oes_research_2024.htm  \n",
+        "\n",
+        "All BLS Software and Web Developers, Programmers and Tester roles were considered equivalent to software engineer positions, because there are no separate SWE occupation code in the BLS dataset. We combined the following occupation codes:\n",
+        "- 15-1251 Computer Programmers\n",
+        "- 15-1252 Software Developers\n",
+        "- 15-1253 Software Quality Assurance Analysts and Testers\n",
+        "- 15-1254 Web Developers\n",
+        "- 15-1255 Web and Digital Interface Designers  \n",
+        "  \n",
+        "This dataset also contains geographic and regional information such as which states have the highest employment, what their mean wage is, and what are the highest-paying metro areas.\n",
+        "\n",
+        "**Features:**  \n",
+        "From Kaggle:  \n",
+        "*title, company, salary, location, hires_needed, urgently_hiring, remote_work_model, is_remote, city_state*\n",
+        "\n",
+        "From BLS:  \n",
+        "*AREA_TITLE, TOT_EMP, A_MEAN*\n"
       ],
       "metadata": {
         "id": "qtUQ_nh4Gkd3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# About our Datasets\n",
-        "---\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "HpPFtGvSB4WY"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "https://www.kaggle.com/datasets/mexwell/us-software-engineer-jobs?resource=download\n",
-        "\n",
-        "This dataset contains over 50,000 jobs postings for software engineering positions in the United States. The postings were scraped from Indeed and provide details such as the Job Title, Company, Salary Ranges, Location, Employment Type, Employer Ratings, Urgency of Hiring, and Remote Work Option. This dataset contains information pertaining to employer behavior and demand signals. Both of these will allow us to track trends in the industry, such as Remote versus Onsite listings, Urgency Indicators, and Role Distribution across the nation and industries.\n",
-        "\n",
-        "https://www.bls.gov/oes/oes_research_2024.htm\n",
-        "\n",
-        "This dataset is from the U.S Bureau of Labor Statistics (BLS) under the Occupational Employment and Wage Statistics (OEWS) program. All BLS Software and Web Developers, Programmers and Tester roles (OCC_CODE 15-1250) were considered equivalent to software engineer positions, because there are no separate SWE occupation code in the BLS dataset. However, in the specific dataset we used the occupation code was split between OCC_CODES and we combined them:\n",
-        "\n",
-        "*   15-1251 Computer Programmers\n",
-        "*   15-1252 Software Developers\n",
-        "*   15-1253 Software Quality Assurance Analysts and Testers\n",
-        "*   15-1254 Web Developers\n",
-        "*   15-1255 Web and Digital Interface Designers\n",
-        "\n",
-        "We will be using this dataset to supplement our aforementioned dataset with a salary column. In addition, this dataset also contains geographic and regional information such as which states have the highest employment, what their mean wage is, and what are the highest-paying metro areas."
-      ],
-      "metadata": {
-        "id": "9c5-NDSDB-Ut"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# What are we trying to predict?\n",
-        "---\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "WOGh8R9bDcmN"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "In this project, we are trying to predict job availability and demand for software engineering roles in the United States. Using features such as Job Title, Company, Location, Employment Type, and Remote Work Options, we will create predictive models to estimate job openings and identify factors that influence hiring trends. Our analysis will show which skills and positions are in highest demand, how remote work affects opportunities, and how these patterns may shift over time. Our predictions will hopefully help job seekers and employers make data-driven decisions about our evolving software job market."
-      ],
-      "metadata": {
-        "id": "RSlYKQ9WDfiC"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Features we will be using to predict:\n",
-        "---\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "0roUPy_wGVr6"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### From Kaggle:\n",
-        "\n",
-        "*   title\n",
-        "*   company\n",
-        "*   salary\n",
-        "*   location\n",
-        "*   hires_needed\n",
-        "*   urgently_hiring\n",
-        "*   remote_work_model\n",
-        "*   is_remote\n",
-        "*   city\n",
-        "*   state\n",
-        "#### From BLS:\n",
-        "\n",
-        "*   AREA_TITLE\n",
-        "*   TOT_EMP\n",
-        "*   A_MEAN\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "kHgGV7g_JbWq"
       }
     },
     {
@@ -191,13 +128,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "Oz2BvPuBGuxx"
-      }
     },
     {
       "cell_type": "markdown",
