--- a/CST383_Final_Project.ipynb
+++ b/CST383_Final_Project.ipynb
@@ -84,11 +84,14 @@
         "This dataset also contains geographic and regional information such as which states have the highest employment, what their mean wage is, and what are the highest-paying metro areas.\n",
         "\n",
         "**Features:**  \n",
-        "From Kaggle:  \n",
+        "From Kaggle  \n",
         "*title, company, salary, location, hires_needed, urgently_hiring, remote_work_model, is_remote, city_state*\n",
         "\n",
-        "From BLS:  \n",
-        "*AREA_TITLE, TOT_EMP, A_MEAN*\n"
+        "From BLS  \n",
+        "- *AREA_TITLE:* State Name\n",
+        "- *TOT_EMP:* Estimated Total Employment Rounded to the Nearest 10\n",
+        "- *H_MEAN:* Mean Hourly Wage\n",
+        "- *A_MEAN:* Mean Annual Wage\n"
       ],
       "metadata": {
         "id": "qtUQ_nh4Gkd3"
